--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -24,5 +24,8 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run Python script
+      env:
+        TOKEN: ${{ secrets.TOKEN }}
+        MEC: ${{ secrets.MEC }}
       run: |
         python app.py
