Update environment variable from TOKEN to AUTH in daily workflow

--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Run Python script
       env:
-        TOKEN: ${{ secrets.TOKEN }}
+        AUTH: ${{ secrets.AUTH }}
         MEC: ${{ secrets.MEC }}
       run: |
         python app.py
